<resources>
    <string name="app_name">SmallLemon</string>
    <string name="activity_login_forget_pone">输入您用于注册的手机号</string>
    <string name="activity_login_forget_verification">输入验证码</string>
    <string name="activity_login_forget_verification_tv">获取验证码</string>
    <string name="activity_login_forget_possword">设置密码</string>
    <string name="activity_login_forget_submit">提交</string>
    <string name="activity_register_bt_text">注册</string>
    <string name="activity_register_text">请输入6～16英文字母或者数字</string>
    <string name="activity_register_signup">我已阅读并同意小柠乐用户协议</string>
    <string name="activity_register_haveId">已有账号,去</string>
    <string name="activity_register_login">登录!</string>
</resources>
