<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="90px"
        android:layout_marginTop="150px"
        android:src="@mipmap/logo_header" />

    <!--分割线-->


    <include layout="@layout/line_layout" />



    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="140px"
        android:background="#fff"
        android:orientation="vertical">

        <!--输入注册手机号-->

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/activity_rigster_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/activity_login_forget_pone"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingLeft="@dimen/activity_margin" />

    </com.zhy.autolayout.AutoLinearLayout>

    <!--分割线-->


    <include layout="@layout/line_layout" />



    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="140px"
        android:background="#fff"
        android:orientation="horizontal">

        <!--输入验证码-->


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/activity_rigister_verification"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/activity_login_forget_verification"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingLeft="@dimen/activity_margin" />

        <!--获取验证码-->




        <com.andexert.library.RippleView
            rv_centered="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rv_type="rectangle">
            <android.support.v7.widget.CardView
                android:id="@+id/auto_2"
                android:id="@+id/cardView_Code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10px"
                app:cardBackgroundColor="#FFD200"
                app:cardCornerRadius="6px">

                <Button
                    android:id="@+id/activity_rigister_verification_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/activity_login_forget_verification_tv" />

            </android.support.v7.widget.CardView>

        </com.andexert.library.RippleView>

    </com.zhy.autolayout.AutoLinearLayout>

    <include layout="@layout/line_layout" />

    <!--分割线-->


    <include
        layout="@layout/line_layout"
        android:layout_width="match_parent"
        android:layout_height="3px"
        android:layout_marginTop="100px" />

    <!--密码-->



    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/auto_layout_password"
        android:layout_width="match_parent"
        android:layout_height="140px"
        android:layout_below="@id/tv_phone_null"
        android:background="#fff"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:minLines="6"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingLeft="@dimen/activity_margin" />

        <!--查看密码-->


        <CheckBox
            android:id="@+id/look_password"
            android:layout_width="120px"
            android:layout_height="120px"
            android:layout_marginRight="@dimen/activity_margin"
            android:background="@drawable/watch_password_selector"
            android:button="@null" />

    </com.zhy.autolayout.AutoLinearLayout>

    <!--分割线-->


    <include layout="@layout/line_layout" />

    <TextView
        android:id="@+id/tv_password_null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30px"
        android:text="@string/activity_register_text"
        android:textSize="12sp" />



    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120px"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/agreement_chebox"
            android:layout_width="90px"
            android:layout_height="90px"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/signup_item_seletor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/activity_register_signup" />

    </com.zhy.autolayout.AutoLinearLayout>

    <!--注册-->



    <com.andexert.library.RippleView
        rv_centered="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:rv_type="rectangle">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auto_1"
            app:cardBackgroundColor="#FFD200"
            app:cardCornerRadius="20px">

            <!--登录-->

            <Button
                android:id="@+id/user_login_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:gravity="center"
                android:text="注册" />

        </android.support.v7.widget.CardView>

    </com.andexert.library.RippleView>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_haveId" />

        <TextView
            android:id="@+id/jump_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_register_login"
            android:textColor="@color/colorBlackText"
            android:textSize="15sp" />

    </LinearLayout>

</com.zhy.autolayout.AutoLinearLayout>